--- a/src/app/admin/timeline/timeline-dialog.component.html
+++ b/src/app/admin/timeline/timeline-dialog.component.html
@@ -1,64 +1,87 @@
-<form (ngSubmit)="save()" [formGroup]="form">
-  <h2 mat-dialog-title class="flex-row flex-align-start-center flex-gap-8">
-    <img src="/assets/icons/icon-72x72.png" />
-    <span *ngIf="!data.breweries">{{data.brewery.name}}</span>
-    <span *ngIf="data.breweries">Add To Brewery Tiimeline</span>
-  </h2>
-  <mat-dialog-content>
-    <div class="flex-column flex-gap-8">
-        <mat-form-field style="padding-bottom:8px" *ngIf="data.breweries">
+<div class="timeline-modal">
+  <div class="timeline-header">
+    <div class="logo-section">
+      <div class="icon-container">
+        <mat-icon class="timeline-icon">schedule</mat-icon>
+      </div>
+      <div class="brand-info">
+        <h2>{{ dialogTitle }}</h2>
+        <p>{{ dialogSubtitle }}</p>
+      </div>
+    </div>
+  </div>
+
+  <form (ngSubmit)="save()" [formGroup]="form" class="timeline-form">
+    <div class="form-content">
+      <div class="form-fields">
+        <mat-form-field appearance="outline" class="timeline-field" *ngIf="data.breweries">
           <mat-label>Brewery</mat-label>
-          <input type="text" matInput formControlName="brewery" [matAutocomplete]="auto">
+          <input type="text" matInput formControlName="brewery" [matAutocomplete]="auto" placeholder="Select a brewery">
+          <mat-icon matSuffix class="field-icon">local_bar</mat-icon>
           <mat-error *ngIf="form.controls['brewery']?.errors?.['required']">Brewery is required</mat-error>
           <mat-error *ngIf="form.controls['brewery']?.errors?.['match'] && !form.controls['brewery']?.errors?.['required']">Must choose brewery from list</mat-error>
-          <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+          <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="brewery-autocomplete">
             <mat-option *ngFor="let brewery of filtered | async" [value]="brewery">
-              <h3>{{brewery.name}}</h3>
-              <caption>{{brewery.address}}</caption>
+              <div class="brewery-option">
+                <h3>{{brewery.name}}</h3>
+                <p class="brewery-address">{{brewery.address}}</p>
+              </div>
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-      <div class="flex-row flex-gap-8">
-        <mat-form-field appearance="outline" class="flex-calc-50">
-          <mat-label>Start Date</mat-label>
-          <input matInput [matDatepicker]="pickerStart" formControlName="start" (dateChange)="onStartChange()" />
-          <mat-error *ngIf="form.controls['start']?.errors?.['required']">Start Date is required</mat-error>
-          <mat-datepicker #pickerStart></mat-datepicker>
-          <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="flex-calc-50">
-          <mat-label>End Date</mat-label>
-          <input matInput [matDatepicker]="pickerEnd" formControlName="end" />
-          <mat-error *ngIf="form.controls['end']?.errors?.['required']">End Date is required</mat-error>
-          <mat-datepicker #pickerEnd></mat-datepicker>
-          <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
-        </mat-form-field>
-      </div>
-      <div class="flex-row flex-gap-8">
-        <mat-form-field appearance="outline" class="flex-calc-50">
-          <mat-label>Start Time</mat-label>
-          <input matInput [ngxTimepicker]="startTime" formControlName="startTime" readonly />
-          <button matSuffix mat-icon-button type="button" (click)="startTime.open()">
-            <mat-icon>schedule</mat-icon>
-          </button>
-          <mat-error *ngIf="form.controls['startTime']?.errors?.['required']">Start Time is required</mat-error>
-          <ngx-material-timepicker #startTime [theme]="theme" [defaultTime]="defaultTimeStart"></ngx-material-timepicker>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="flex-calc-50">
-          <mat-label>End Time</mat-label>
-          <input matInput [ngxTimepicker]="endTime" formControlName="endTime" readonly />
-          <button matSuffix mat-icon-button type="button" (click)="endTime.open()">
-            <mat-icon>schedule</mat-icon>
-          </button>
-          <mat-error *ngIf="form.controls['endTime']?.errors?.['required']">End Time is required</mat-error>
-          <ngx-material-timepicker #endTime [theme]="theme" [defaultTime]="defaultTimeEnd"></ngx-material-timepicker>
-        </mat-form-field>
+
+        <div class="date-time-row">
+          <mat-form-field appearance="outline" class="timeline-field">
+            <mat-label>Start Date</mat-label>
+            <input matInput [matDatepicker]="pickerStart" formControlName="start" (dateChange)="onStartChange()" />
+            <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+            <mat-datepicker #pickerStart></mat-datepicker>
+            <mat-error *ngIf="form.controls['start']?.errors?.['required']">Start Date is required</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="timeline-field">
+            <mat-label>End Date</mat-label>
+            <input matInput [matDatepicker]="pickerEnd" formControlName="end" />
+            <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+            <mat-datepicker #pickerEnd></mat-datepicker>
+            <mat-error *ngIf="form.controls['end']?.errors?.['required']">End Date is required</mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="date-time-row">
+          <mat-form-field appearance="outline" class="timeline-field">
+            <mat-label>Start Time</mat-label>
+            <input matInput type="time" formControlName="startTime" />
+            <mat-icon matSuffix>schedule</mat-icon>
+            <mat-error *ngIf="form.controls['startTime']?.errors?.['required']">Start Time is required</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="timeline-field">
+            <mat-label>End Time</mat-label>
+            <input matInput type="time" formControlName="endTime" />
+            <mat-icon matSuffix>schedule</mat-icon>
+            <mat-error *ngIf="form.controls['endTime']?.errors?.['required']">End Time is required</mat-error>
+          </mat-form-field>
+        </div>
       </div>
     </div>
-  </mat-dialog-content>
-  <div align="end" mat-dialog-actions>
-    <button mat-button mat-raised-button mat-dialog-close color="primary">Cancel</button>
-    <div class="spacer"></div>
-    <button mat-button mat-raised-button color="accent">Save</button>
-  </div>
-</form>
+
+    <div class="timeline-actions">
+      <button mat-raised-button
+              color="primary"
+              type="submit"
+              [disabled]="form.invalid"
+              class="save-button">
+        <mat-icon>save</mat-icon>
+        <span>Save Timeline</span>
+      </button>
+
+      <button mat-button
+              type="button"
+              (click)="cancel()"
+              class="cancel-button">
+        Cancel
+      </button>
+    </div>
+  </form>
+</div>
