--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,6 +11,10 @@
 }
 
 // Toolbar styling
+.spacer {
+  flex: 1 1 auto;
+}
+
 .mat-toolbar.mat-transparent {
   background: transparent;
   backdrop-filter: blur(10px);
